objects/Income__c.object
<CustomObject>
    <description>Added a change for demo on 30-Mar-23</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Added a change for demo on 30-Mar-23</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Added a change for demo on 30-Mar-23</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Added a change for demo on 30-Mar-23</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>Income</label>
    <nameField>
        <label>Income Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>